--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,11 @@
-Flask
-Flask-Assets
-
-compass
+Flask-Assets==0.8
+Flask==0.10.1
+Jinja2==2.7.1
+MarkupSafe==0.18
+Werkzeug==0.9.4
+compass==0.1.4
+ipython==1.1.0
+itsdangerous==0.23
+nose==1.3.0
+webassets==0.8
+wsgiref==0.1.2
