--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,6 @@ ipython==1.1.0
 itsdangerous==0.23
 nose==1.3.0
 selenium==2.39.0
-twill==0.9
-webassets==0.8
-wsgiref==0.1.2
+tox==1.6.1
+webassets==0.9
+
