--- a/requirements.txt
+++ b/requirements.txt
@@ -3,20 +3,21 @@ Flask-Assets==0.8
 Flask-Migrate==1.1.0
 Flask-SQLAlchemy==1.0
 Flask-Script==0.6.6
-# Flask-Testing==0.4.1 # isn't on pypi yet so we'll do this:
-git+https://github.com/jarus/flask-testing@7bf34b039cb93b5447073c12243f9f4debc14a6c#egg=Flask-Testing
-Jinja2==2.7.1
+Flask-Testing==0.4.1
+Jinja2==2.7.3
 Mako==0.9.1
-MarkupSafe==0.18
-SQLAlchemy==0.9.0
-Werkzeug==0.9.4
+MarkupSafe==0.23
+SQLAlchemy==0.9.7
+Werkzeug==0.9.6
 alembic==0.6.2
 compass==0.1.4
-ipython==1.1.0
-itsdangerous==0.23
-nose==1.3.0
-py==1.4.19
-selenium==2.39.0
-tox==1.6.1
-virtualenv==1.10.1
-webassets==0.9
+gnureadline==6.3.3
+ipython==2.2.0
+itsdangerous==0.24
+nose==1.3.3
+py==1.4.23
+selenium==2.42.1
+tox==1.7.2
+virtualenv==1.11.6
+webassets==0.10.1
+wsgiref==0.1.2
